<resources>
    <string name="app_name">GuessNumber</string>
    <string name="info">Попробуй угадать число от 0 до 5</string>
    <string name="input">Число</string>
    <string name="button">Отправить</string>
    <string name="newbutton">Новая игра</string>
    <string name="hit">В точку!</string>
    <string name="more">Перебор :(</string>
    <string name="less">Маловато :(</string>
    <string name="error">Ошибка! Нужно число от 0 до 5</string>
    <string name="popit">Попыток: 5</string>
    <string name="lost">Потрачено</string>

</resources>