<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp">

        <TableRow
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/infoTxt"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/popitTxt"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:text="@string/popit"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage|numberDecimal"
                android:text="@string/input"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:onClick="onClick"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
            android:id="@+id/newbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newbutton"
            android:onClick="onClick"/>
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>